[package]
name = "alice-lora"
version = "1.0.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoro@alicelaw.net>"]
license = "MIT OR Apache-2.0"
description = "LoRaWAN protocol implementation: chirp spread spectrum, ADR, OTAA/ABP, MAC commands, device classes A/B/C"

[lib]
crate-type = ["rlib"]
